# wh40k-randomizer

./: WH40k Randomizer.cpp  WH40k-Randomizer.cpp
9th-Edition/: CMakeLists.txt  WH40k Randomizer.h
